  - Close files opened when loading Goby Alignment header and index files. This fixes a too many file error
    that could occur when loading hundreds of alignments simultaneously.
  - Allow lenient import mode for TSV files. This makes it possible to convert TSV files to lucene.index when
    they have been created with Goby in the past with a \t character as last character of the column line.
2.3.4
 - Optimize the speed of genotyping when some sites have very high coverage (>500M bases).
   Now sub-sampling to keep a random set of 10,000 bases for such sites. Expose the default
   sub-sample size with a dynamic option called sub-sample-size in IterateSortedAlignmentsListImpl.
   (-x IterateSortedAlignmentsListImpl:sub-sample-size <int>)
 - LastToCompact mode now supports the import of paired end alignments produced by Last's last-pair-probs.sh.
 - LastToCompact mode now supports the import of quality scores (lastal must be done with -Q1 since the
   import assumes Phred quality scores on the q lines).
 - Add two methods to AlignmentReader to determine the minimum and maximum genomic locations represented
   in the reader. This is useful when suggesting slices to split a set of alignments. This commit includes
   a fix for possible null start or end positions in slices generated with suggest-position-slices.
 - Fix a problem with run-in-parallel where some threads would never finish when they do not detect
   the keyword. Now indicate that the thread finished so that others can start when the processing
   completes.
 - reads-file-stats: remove any path from basename in the output.

2.3.3
 - IterateSortedAlignmentsListImpl: Use a WarningCounter to limit warnings to 10 instances. This is needed to
   avoid writing Gb of log output when the threshold is met.
 - discover-sequence-variants somatic output: Make it possible to run a simple trio design by removing the
   requirement for a germline sample.